// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a stop card 1`] = `
<div
  className="m-tnm-sidebar__route"
>
  <div
    className="h3 m-tnm-sidebar__route-name u-bg--bus"
  >
    <span
      className="bus-route-sign"
    >
      11
    </span>
  </div>
  <div
    className="m-tnm-sidebar__stop"
  >
    <div
      className="m-tnm-sidebar__stop-info"
    >
      <div
        className="m-tnm-sidebar__stop-name"
      >
        Washington St @ Essex St
      </div>
      <div
        className="m-tnm-sidebar__stop-distance"
      >
        0.2 mi
      </div>
    </div>
    <div>
      <div
        className="m-tnm-sidebar__direction"
      >
        <div
          className="m-tnm-sidebar__direction-name u-small-caps"
        >
          Inbound
        </div>
        <div
          className="m-tnm-sidebar__direction-destination"
        >
          Downtown Boston
        </div>
      </div>
      <div
        className="m-tnm-sidebar__headsign-schedule"
      >
        <div
          className="m-tnm-sidebar__headsign"
        >
          <div
            className="m-tnm-sidebar__headsign-name"
          >
            Downtown
          </div>
        </div>
        <div
          className="m-tnm-sidebar__schedules"
        >
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                &lt; 1
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                &lt; 1
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-tnm-sidebar__stop"
  >
    <div
      className="m-tnm-sidebar__stop-info"
    >
      <div
        className="m-tnm-sidebar__stop-name"
      >
        Tufts Medical Center
      </div>
      <div
        className="m-tnm-sidebar__stop-distance"
      >
        0.1 mi
      </div>
    </div>
    <div>
      <div
        className="m-tnm-sidebar__direction"
      >
        <div
          className="m-tnm-sidebar__direction-name u-small-caps"
        >
          Inbound
        </div>
        <div
          className="m-tnm-sidebar__direction-destination"
        >
          Downtown Boston
        </div>
      </div>
      <div
        className="m-tnm-sidebar__headsign-schedule"
      >
        <div
          className="m-tnm-sidebar__headsign"
        >
          <div
            className="m-tnm-sidebar__headsign-name"
          >
            Downtown
          </div>
        </div>
        <div
          className="m-tnm-sidebar__schedules"
        >
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                &lt; 1
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                &lt; 1
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it renders a stop card for the silver line 1`] = `
<div
  className="m-tnm-sidebar__route"
>
  <div
    className="h3 m-tnm-sidebar__route-name u-bg--silver-line"
  >
    <span
      className=""
    >
      SL4
    </span>
  </div>
  <div
    className="m-tnm-sidebar__stop"
  >
    <div
      className="m-tnm-sidebar__stop-info"
    >
      <div
        className="m-tnm-sidebar__stop-name"
      >
        Washington St @ Essex St
      </div>
      <div
        className="m-tnm-sidebar__stop-distance"
      >
        0.2 mi
      </div>
    </div>
    <div>
      <div
        className="m-tnm-sidebar__direction"
      >
        <div
          className="m-tnm-sidebar__direction-name u-small-caps"
        >
          Inbound
        </div>
        <div
          className="m-tnm-sidebar__direction-destination"
        >
          South Station
        </div>
      </div>
      <div
        className="m-tnm-sidebar__headsign-schedule"
      >
        <div
          className="m-tnm-sidebar__headsign"
        >
          <div
            className="m-tnm-sidebar__headsign-name"
          >
            South Station
          </div>
        </div>
        <div
          className="m-tnm-sidebar__schedules"
        >
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                &lt; 1
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                &lt; 1
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-tnm-sidebar__stop"
  >
    <div
      className="m-tnm-sidebar__stop-info"
    >
      <div
        className="m-tnm-sidebar__stop-name"
      >
        Tufts Medical Center
      </div>
      <div
        className="m-tnm-sidebar__stop-distance"
      >
        0.1 mi
      </div>
    </div>
    <div>
      <div
        className="m-tnm-sidebar__direction"
      >
        <div
          className="m-tnm-sidebar__direction-name u-small-caps"
        >
          Outbound
        </div>
        <div
          className="m-tnm-sidebar__direction-destination"
        >
          Dudley
        </div>
      </div>
      <div
        className="m-tnm-sidebar__headsign-schedule"
      >
        <div
          className="m-tnm-sidebar__headsign"
        >
          <div
            className="m-tnm-sidebar__headsign-name"
          >
            Dudley
          </div>
        </div>
        <div
          className="m-tnm-sidebar__schedules"
        >
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                2
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                mins
              </div>
            </div>
          </div>
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                16
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                mins
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="m-tnm-sidebar__direction"
      >
        <div
          className="m-tnm-sidebar__direction-name u-small-caps"
        >
          Inbound
        </div>
        <div
          className="m-tnm-sidebar__direction-destination"
        >
          South Station
        </div>
      </div>
      <div
        className="m-tnm-sidebar__headsign-schedule"
      >
        <div
          className="m-tnm-sidebar__headsign"
        >
          <div
            className="m-tnm-sidebar__headsign-name"
          >
            South Station
          </div>
        </div>
        <div
          className="m-tnm-sidebar__schedules"
        >
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                &lt; 1
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                &lt; 1
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`returns null if route has no schedules 1`] = `null`;
